# integer-programming-activities

./: .gitignore  CMakeLists.txt  entrada.txt
.github/workflows/: build_and_release.yml
activity1/: README.md  gerador.py  greedy_set_cover.cpp  main.cpp  matrix.hpp  test.txt
atividade2/: atividade2.questao2.py  atividade2.tex
atividade4/: ativ4.py  pag.py  problem.json  problem_OLD_FORMAT.json
branch-and-bound/: ex-relaxlinear-pm01.py  relaxlinear-pm01-python3.9.py  relaxlinear-pm01.py
minimal-set-cover/: CMakeLists.txt  README.md  gerador.py  main.cpp  matrix.hpp  minimalSetCoverGreedy_py_version.py  test.py  test.txt
vertex-cover/: vertex-cover-test.ipynb  vertex-cover.py  vertex_cover.py  vertexcover.py
